feat: added documentation for updateOpening
